--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -7,7 +7,7 @@
           ╰─────────────╯ ╰─────────────╯ */
 
 
-#define COMBO_HOOK
+#undef COMBO_HOOK
 #define COMBO_HOOK global-quick-tap-ms = <75>;
 
 #define COMBO_TERM_FAST 20
