--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -8,7 +8,7 @@
 
 
 #undef COMBO_HOOK
-#define COMBO_HOOK global-quick-tap-ms = <75>;
+#define COMBO_HOOK require-prior-idle-ms = <75>;
 
 #define COMBO_TERM_FAST 20
 #define COMBO_TERM_SLOW 35
